# IHA

./: .gitignore  AGENTS.md  AIService.cpp  AIService.h  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  DeviceManager.cpp  DeviceManager.h  HealthCircleManager.cpp  HealthCircleManager.h  HealthDataManager.cpp  HealthDataManager.h  LICENSE  Main.qml  MedicalService.cpp  MedicalService.h  README.md  UserService.cpp  UserService.h  build10.txt  build13.txt  build2.txt  build3.txt  build4.txt  build7.txt  build8.txt  build9.txt  build_log.txt  config.h.example  main.cpp  verbose_build.txt  软件需求功能描述.docx
backend/: .dockerignore  .env.example  .gitignore  CMakeLists.txt  Dockerfile  README.md  config.docker.json  config.example.json  docker-compose.yml
backend/sql/: init.sql
backend/src/: auth_routes.cpp  config.h  database.cpp  database.h  feature_routes.cpp  health_routes.cpp  jwt_util.cpp  jwt_util.h  logger.h  main.cpp  middleware.h  password_util.h  report_routes.cpp  routes.h  stub_routes.cpp  user_routes.cpp
qml/components/: AnimatedProgressBar.qml  Button.qml
qml/pages/: AddDevicePage.qml  AssistantPage.qml  DataAuthorizationPage.qml  DeviceDetailPage.qml  DevicePage.qml  EnvironmentPage.qml  HabitsPage.qml  HealthCirclePage.qml  HealthPage.qml  HealthReportPage.qml  LoginPage.qml  MyActivitiesPage.qml  MyBadgesPage.qml  MyCoursesPage.qml  MyFamilyFriendsPage.qml  MyOrdersPage.qml  OnlineConsultationPage.qml  ProfilePage.qml
qml/pages/details/: ActivityCountDetailPage.qml  ActivityDetailPage.qml  CaloriesDetailPage.qml  HeartRateDetailPage.qml  SleepDetailPage.qml  StepsDetailPage.qml
qml/pages/settings/: AboutPage.qml  AppSettingsPage.qml  HelpFeedbackPage.qml  PrivacyPolicyPage.qml  ProfileInfoPage.qml  SystemPermissionsPage.qml
